# health-insurance-cross-sell

./: .gitmodules  README.md  pyproject.toml  requirements.txt
Health-Insurance/: handler.py
Health-Insurance/features/: annual_premiun_scaler.pkl  fe_policy_sales_channel_scaler.pkl  target_encode_gender_scaler.pkl  target_encode_region_code_scaler.pkl  vehicle_age_scaler.pkl
Health-Insurance/healthinsurance/: HealthInsurance.py
Health-Insurance/models/: model_xgb.pkl
data/models/: lr_model.pkl  model_linear_regression.pkl  model_xgb.pkl
data/processed/: df_test.csv
notebooks/: 1.0_dso_health_insurance_cross_sell.ipynb
