[tool.poetry]
name = "health-insurance-cross-sell"
version = "0.1.0"
description = ""
authors = ["Douglas Saturnino <douglasaturnino@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.14"
flask = "^3.0.3"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
xgboost = "^2.1.1"
boruta = "^0.3"
seaborn = "^0.13.2"
scikit-plot = "^0.3.7"
imblearn = "^0.0"
numpy = "^2.0.1"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
